--- a/MovieHub/Views/Movie/Index.cshtml
+++ b/MovieHub/Views/Movie/Index.cshtml
@@ -6,6 +6,9 @@
 
 
 <h2>Movies</h2>
+
+@Html.ActionLink("New", "New", "Movie", new { @class = "btn btn-primary"})
+
 @if (!Model.Any())
 {
     <p>We don't have any Movies yet.</p>
@@ -23,7 +26,7 @@ else
             @foreach (var movie in Model)
             {
                 <tr>
-                    <td>@Html.ActionLink(movie.Name, "Details", "Movie", new { id = movie.Id }, null)</td>
+                    <td>@Html.ActionLink(movie.Name, "Edit", "Movie", new { id = movie.Id }, null)</td>
                     <td>@movie.Genre.Name</td>
                 </tr>
             }
