--- a/MovieHub/Views/Rentals/New.cshtml
+++ b/MovieHub/Views/Rentals/New.cshtml
@@ -10,13 +10,13 @@
     <div class="form-group">
         <label>Customer</label>
         <div class="tt-container">
-            <input id ="customer" type="text" value="" class="form-control" />
+            <input id ="customer" name="customer" required data-rule-validCustomer="true" type="text" value="" class="form-control" />
         </div>
     </div>
     <div class="form-group">
         <label>Movie</label>
         <div class="tt-container">
-            <input id="movie" type="text" value="" class="form-control" />
+            <input id="movie" name="movie" data-rule-atLeasetOneMovie="true" type="text" value="" class="form-control" />
         </div>
 
     </div>
@@ -33,6 +33,8 @@
 
 @section scripts
 {
+    @Scripts.Render("~/bundles/jqueryval")
+
     <script>
         $(document).ready(function () {
 
@@ -84,21 +86,36 @@
                 vm.movieIds.push(movie.id);
                 });
 
-            $("#newRental").submit(function (e) {
-                e.preventDefault();
-
-                $.ajax({
-                    url: "/api/newRentals",
-                    method: "Post",
-                    data: vm
-                })
-                    .done(function () {
-                        console.log("done");
-
+            $.validator.addMethod("validCustomer", function () {
+                return vm.customerId && vm.customerId !== 0;
+            }, "Please select a valid customer.");
+            $.validator.addMethod("atLeastOneMovie", function () {
+                return vm.movieIds.length > 0;
+            }, "Please select at least one movie.");
+            var validator = $("#newRental").validate({
+                submitHandler: function () {
+                    $.ajax({
+                        url: "/api/newRentals",
+                        method: "post",
+                        data: vm
                     })
-                    .fail(function () { });
+                        .done(function () {
+                            toastr.success("Rentals successfully recorded.");
+                            $("#customer").typeahead("val", "");
+                            $("#movie").typeahead("val", "");
+                            $("#movies").empty();
+                            vm = { movieIds: [] };
+                            validator.resetForm();
+                        })
+                        .fail(function () {
+                            toastr.error("Something unexpected happened.");
+                        });
+                    return false;
+                }
 
             });
+
+           
 
         });
     </script>
