--- a/MovieHub/Views/Movie/List.cshtml
+++ b/MovieHub/Views/Movie/List.cshtml
@@ -6,7 +6,7 @@
 
 
 <h2>Movies</h2>
-@Html.ActionLink("New", "New", "Movie", new { @class = "btn btn-primary" })
+@Html.ActionLink("Newasd", "New", "Movie", new { @class = "btn btn-primary" })
 
 <table id="movies" class="table table-bordered table-hover">
     <thead>
