--- a/MovieHub/Views/Shared/_Layout.cshtml
+++ b/MovieHub/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Moviehub</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -12,9 +12,9 @@
     @Html.Partial("_Navbar")
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Moviehub</p>
+        <hr class="LayoutHr"/>
+        <footer class="ftr">
+            <p class="ftr-text">&copy; @DateTime.Now.Year - Moviehub</p>
         </footer>
     </div>
 
