--- a/MovieHub/Views/Movie/List.cshtml
+++ b/MovieHub/Views/Movie/List.cshtml
@@ -6,8 +6,9 @@
 
 
 <h2>Movies</h2>
-@Html.ActionLink("Newasd", "New", "Movie", new { @class = "btn btn-primary" })
-
+<p>
+    @Html.ActionLink("Add Movie", "New", "Movie", new { @class = "btn btn-primary" })
+</p>
 <table id="movies" class="table table-bordered table-hover">
     <thead>
         <tr>
